hphp/hack/test/typecheck/reactive/rx_mutable6.php.exp
File "rx_mutable6.php", line 20, characters 3-7:
This object's property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
